feat: initial example application

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="antialiased text-gray-900">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
@@ -8,6 +8,7 @@
     <meta name="description" content="Vitamin" />
     <meta name="theme-color" content="#42b883" />
     <title>Vitamin</title>
+    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
