feat: dark mode

--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
 <!DOCTYPE html>
-<html lang="en" class="antialiased text-gray-900">
+<html
+  lang="en"
+  class="antialiased text-gray-900 dark:text-white dark:bg-gray-800"
+>
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/png" href="/favicon.png" />
