refactor: use the static variant of the Inter font as its size is much smaller

--- a/index.html
+++ b/index.html
@@ -11,7 +11,12 @@
     <meta name="description" content="Vitamin" />
     <meta name="theme-color" content="#42b883" />
     <title>Vitamin</title>
-    <link rel="stylesheet" href="https://rsms.me/inter/inter.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Inter:wght@400;500;700;800&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
