feat: add prettier-plugin-tailwindcss

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html
 	lang="en"
-	class="antialiased text-gray-900 dark:text-white dark:bg-gray-800"
+	class="text-gray-900 antialiased dark:bg-gray-800 dark:text-white"
 >
 	<head>
 		<meta charset="UTF-8" />
